--- a/particles-vite/package.json
+++ b/particles-vite/package.json
@@ -8,6 +8,9 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "gpu.js": "^2.16.0"
+  },
   "devDependencies": {
     "vite": "^7.2.4"
   }
